--- a/src/index.scss
+++ b/src/index.scss
@@ -2,10 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap');
 
 body {
-  margin: 0;
+  margin: 160px 0 0 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #dfe2ff;
+  // background-color: #dfe2ff;
+  background-color: #c6ebfa;
+
 }
 
 * {
@@ -60,7 +62,7 @@ body {
     justify-content: space-between;
     margin-bottom: 15px;
 
-    & > div {
+    &>div {
       display: flex;
     }
 
@@ -114,26 +116,29 @@ body {
 }
 
 .send-invite-btn {
-  background-color: rgb(251, 80, 0);
+  background-color: rgb(16, 119, 236);
   padding: 16px 15px;
+  margin: 10px auto;
   border-radius: 15px;
   font-size: 16px;
   color: #fff;
   width: 100%;
   border: 0;
   outline: none;
-  box-shadow: 0 7px 10px rgba(251, 80, 0, 0.4);
+  box-shadow: 0 6px 10px rgba(0, 180, 251, 0.4);
   cursor: pointer;
   transition: all 0.1s ease-in-out;
 
   &:hover {
-    background-color: rgb(255, 97, 24);
+    background-color: rgb(0, 151, 251);
+    transform: translateY(-2px);
   }
 
   &:active {
-    transform: translateY(2px);
+    transform: translateY(0);
     box-shadow: none;
   }
+
 }
 
 .success-block {
